Fixed flex wrap issue in projects section

--- a/style.css
+++ b/style.css
@@ -195,7 +195,6 @@ a:visited {
 
 /*Projects Styling*/
 .projects {
-    min-height: 500px;
     border-radius: 35px;
     display: flex;
     align-items: center;
@@ -218,26 +217,21 @@ a:visited {
     padding: 0px 32px;
 }
 
-.projects > .projects-container {
-    min-height: inherit;
-    flex: 1;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
 
-.projects-container > .projects-cards {
+.projects > .projects-cards {
     display: flex;
     flex: 1;
     padding: 50px;
     justify-content: space-around;
+    flex-wrap: wrap;
     column-gap: 50px;
+    row-gap: 50px;
 }
 
 .projects-cards > * {
-    flex: 1;
-    max-width: 400px;
-    min-width: 200px;
+    display: flex;
+    flex: 0 0 250px;
+    min-height: 350px;
     display: flex;
     justify-content: center;
     align-items: center;
